[gd_scene load_steps=7 format=2]

[ext_resource path="res://About.gd" type="Script" id=1]
[ext_resource path="res://MainScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/infoHeader.png" type="Texture" id=3]
[ext_resource path="res://infoOptions.png" type="Texture" id=4]
[ext_resource path="res://Sprites/backarrow.png" type="Texture" id=5]
[ext_resource path="res://Sprites/blackLine.png" type="Texture" id=6]

[node name="About" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MainScreen" parent="." instance=ExtResource( 2 )]

[node name="Button" type="Button" parent="MainScreen"]
margin_left = 11.0
margin_top = 31.0
margin_right = 95.0
margin_bottom = 114.0
flat = true

[node name="Backarrow" type="Sprite" parent="MainScreen/Button"]
position = Vector2( 63, 32 )
scale = Vector2( 0.100625, 0.113125 )
texture = ExtResource( 5 )

[node name="InfoHeader" type="Sprite" parent="."]
position = Vector2( 383, 65 )
texture = ExtResource( 3 )

[node name="GameTipsButton" type="Button" parent="."]
margin_left = 97.0
margin_top = 249.0
margin_right = 628.0
margin_bottom = 404.0

[node name="LegalButton" type="Button" parent="."]
margin_left = 101.0
margin_top = 478.0
margin_right = 628.0
margin_bottom = 627.0

[node name="DevsButton" type="Button" parent="."]
margin_left = 101.0
margin_top = 716.0
margin_right = 623.0
margin_bottom = 858.0

[node name="FeedbackButton" type="Button" parent="."]
margin_left = 106.0
margin_top = 931.0
margin_right = 628.0
margin_bottom = 1078.0

[node name="BlackLine" type="Sprite" parent="."]
position = Vector2( 350, 137.75 )
scale = Vector2( 1, 0.681818 )
texture = ExtResource( 6 )

[node name="InfoOptions" type="Sprite" parent="BlackLine"]
position = Vector2( 14, 763.033 )
scale = Vector2( 0.594444, 1.03143 )
texture = ExtResource( 4 )

[connection signal="pressed" from="MainScreen/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="GameTipsButton" to="." method="_on_GameTipsButton_pressed"]
[connection signal="pressed" from="LegalButton" to="." method="_on_LegalButton_pressed"]
[connection signal="pressed" from="DevsButton" to="." method="_on_DevsButton_pressed"]
[connection signal="pressed" from="FeedbackButton" to="." method="_on_FeedbackButton_pressed"]
